// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FailureStrategyPanel /> tests adding a new strategy works 1`] = `
<div
  class="main"
  data-testid="failure-strategy-panel"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-size-small"
  >
    <span>
      pipeline.failureStrategies.helpText
    </span>
    <a
      href="pipeline.failureStrategies.learnMoreLink"
      rel="noreferrer"
      target="_blank"
    >
      pipeline.createPipeline.learnMore
    </a>
  </p>
  <div
    class="header"
  >
    <div
      class="tabs"
    >
      <ul
        class="stepList"
      >
        <li
          class="stepListItem"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main stepListBtn StyledProps--intent-primary Button--with-current-color"
            data-selected="true"
            data-testid="failure-strategy-step-0"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              1
            </span>
          </button>
        </li>
      </ul>
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <a
            aria-label="pipeline.failureStrategies.tabHasErrors"
            class="bp3-button bp3-disabled bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
            data-testid="add-failure-strategy"
            disabled=""
            role="button"
            tabindex="-1"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              <span>
                add
              </span>
            </span>
          </a>
        </span>
      </span>
    </div>
    <button
      class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      data-testid="remove-failure-strategy"
      type="button"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="main-trash"
      >
        <svg
          height="12"
          viewBox="0 0 16 20"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
            fill="currentColor"
            fill-rule="evenodd"
            opacity="0.3"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp3-form-group failureSelect"
  >
    <label
      class="bp3-label"
      for="failureStrategies[0].onFailure.errors"
    >
      pipeline.failureStrategies.onFailureOfType
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="selectWrapper"
      >
        <div
          class="bp3-popover-wrapper errorSelect bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
              >
                <div
                  class="bp3-tag-input-values"
                >
                  <input
                    class="bp3-input-ghost bp3-multi-select-tag-input-input"
                    name="failureStrategies[0].onFailure.errors"
                    placeholder="pipeline.failureTypetext"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <label
          class="bp3-control bp3-checkbox"
        >
          <input
            name="failureStrategies[0].onFailure.errors"
            type="checkbox"
            value="AllErrors"
          />
          <span
            class="bp3-control-indicator"
          />
          common.allErrors
        </label>
      </div>
    </div>
  </div>
  <div
    class="bp3-form-group"
  >
    <label
      class="bp3-label"
      for="failureStrategies[0].onFailure.action"
    >
      pipeline.failureStrategies.performAction
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-hand-up StyledProps--main"
                  icon="hand-up"
                >
                  <svg
                    data-icon="hand-up"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      hand-up
                    </desc>
                    <path
                      d="M16.46 7.74c-.38 0-.73.14-1 .36-.19-.6-.78-1.05-1.47-1.05-.47 0-.89.2-1.17.52-.26-.47-.77-.79-1.36-.79-.65 0-1.2.39-1.43.93L10 6.94V1.5c0-.48-.23-.91-.59-1.18C9.2.13 8.92 0 8.56 0H8.5C7.67 0 7 .67 7 1.5v8.24l-.01.67c-.84-.98-1.92-1.76-3.24-1.89-1.79-.18-2.08 1.33-1.43 1.65 1.77.84 3.41 3.35 4.23 4.94 1.05 2.47 1.25 4.9 5.58 4.9 2.38 0 3.92-.76 4.82-2.65.74-1.56 1.05-2.84 1.05-7.15v-.99c0-.81-.69-1.48-1.54-1.48z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.ManualIntervention
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="ManualIntervention"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="rollback-stage"
                >
                  <svg
                    height="26"
                    viewBox="0 0 32 32"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M14.523 5.355a.5.5 0 10-.704-.71l-3.057 3.028a.5.5 0 000 .71l3.057 3.029a.5.5 0 10.704-.711L12.33 8.528H26a.5.5 0 01.5.5V26a.5.5 0 01-.5.5H6a.5.5 0 01-.5-.5v-6.526a.5.5 0 10-1 0V26A1.5 1.5 0 006 27.5h20a1.5 1.5 0 001.5-1.5V9.028a1.5 1.5 0 00-1.5-1.5H12.33l2.193-2.173zm-2.525 9.128a1 1 0 00-1 1v4a1 1 0 001 1h8.003a1 1 0 001-1v-4a1 1 0 00-1-1h-8.003zm0 1h8.003v4h-8.003v-4z"
                      fill="#0278D5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.StageRollback
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="StageRollback"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="rollback-pipeline"
                >
                  <svg
                    height="26"
                    viewBox="0 0 32 32"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M14.523 5.355a.5.5 0 10-.704-.71l-3.057 3.028a.5.5 0 000 .71l3.057 3.028a.5.5 0 10.704-.71L12.33 8.528H26a.5.5 0 01.5.5V26a.5.5 0 01-.5.5H6a.5.5 0 01-.5-.5v-6.526a.5.5 0 10-1 0V26A1.5 1.5 0 006 27.5h20a1.5 1.5 0 001.5-1.5V9.028a1.5 1.5 0 00-1.5-1.5H12.33l2.193-2.173zM8 14.567a1 1 0 011-1h5.379a1 1 0 011 1v.59h1.619v-.57a1 1 0 011-1h5a1 1 0 011 1v2a1 1 0 01-1 1h-2v2.547h2a1 1 0 011 1v2a1 1 0 01-1 1h-5a1 1 0 01-1-1v-.582H12.19a1 1 0 01-1-1v-3.805H9a1 1 0 01-1-1v-2.18zm7.379 1.59h1.619v.43a1 1 0 001 1h2v2.547h-2a1 1 0 00-1 1v.418H12.19v-3.805h2.189a1 1 0 001-1v-.59zM9 14.567v2.18h5.379v-2.18H9zm8.998 6.567h5v2h-5v-2zm5-6.548h-5v2h5v-2z"
                      fill="#0278D5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.PipelineRollback
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="PipelineRollback"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-delete StyledProps--main"
                  icon="delete"
                >
                  <svg
                    data-icon="delete"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      delete
                    </desc>
                    <path
                      d="M15 6a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10l3.29-3.29c.19-.18.3-.43.3-.71zm-5-6C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Ignore
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="Ignore"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-refresh StyledProps--main"
                  icon="refresh"
                >
                  <svg
                    data-icon="refresh"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      refresh
                    </desc>
                    <path
                      d="M19 1c-.55 0-1 .45-1 1v2.06C16.18 1.61 13.29 0 10 0 4.48 0 0 4.48 0 10c0 .55.45 1 1 1s1-.45 1-1c0-4.42 3.58-8 8-8 2.52 0 4.76 1.18 6.22 3H15c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1zm0 8c-.55 0-1 .45-1 1 0 4.42-3.58 8-8 8-2.52 0-4.76-1.18-6.22-3H5c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1s1-.45 1-1v-2.06C3.82 18.39 6.71 20 10 20c5.52 0 10-4.48 10-10 0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Retry
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="Retry"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-tick StyledProps--main"
                  icon="tick"
                >
                  <svg
                    data-icon="tick"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      tick
                    </desc>
                    <path
                      d="M17 4c-.28 0-.53.11-.71.29L7 13.59 3.71 10.3A.965.965 0 003 10a1.003 1.003 0 00-.71 1.71l4 4c.18.18.43.29.71.29s.53-.11.71-.29l10-10A1.003 1.003 0 0017 4z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.MarkAsSuccess
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="MarkAsSuccess"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-ban-circle StyledProps--main"
                  icon="ban-circle"
                >
                  <svg
                    data-icon="ban-circle"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      ban-circle
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm5 11H5c-.55 0-1-.45-1-1s.45-1 1-1h10c.55 0 1 .45 1 1s-.45 1-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Abort
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="Abort"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-resume"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 11"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.57 0c.129 0 .243.052.345.118L6.92.11l6.755 4.42c.189.133.324.362.324.627a.732.732 0 01-.33.619l.006.007-6.755 4.421-.006-.007a.631.631 0 01-.345.118c-.371 0-.675-.332-.675-.737V.737c0-.405.304-.737.675-.737zM2.947 0c.406 0 .737.332.737.737v8.842a.739.739 0 01-.737.737H.737A.739.739 0 010 9.579V.737C0 .332.332 0 .737 0z"
                      fill="#4d5969"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.ProceedWithDefaultValues
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="ProceedWithDefaultValues"
              />
            </label>
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-interactive bp3-elevation-0 Card--card Thumbnail--squareCard Card--interactive"
                tabindex="0"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="mark-as-failure"
                >
                  <svg
                    height="26"
                    viewBox="0 0 40 40"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M3.625 10a.75.75 0 01.75-.75h20.049a.75.75 0 01.75.75v9.248h8.579l-2.542-2.43a.75.75 0 011.036-1.085l3.862 3.692a.748.748 0 01.212.854.75.75 0 01-.212.294l-3.862 3.694a.75.75 0 01-1.037-1.084l2.544-2.433-8.58-.002V30a.75.75 0 01-.75.75H4.375a.75.75 0 01-.75-.75V10zm20.049 9.981v9.269H5.125v-18.5h18.549v9.231zM9.937 14.486a.752.752 0 00-1.062 0 .748.748 0 000 1.06L13.341 20l-4.466 4.454a.748.748 0 000 1.06.752.752 0 001.062 0l4.466-4.455 4.465 4.455a.752.752 0 001.062 0 .748.748 0 000-1.06L15.465 20l4.465-4.454a.748.748 0 000-1.06.752.752 0 00-1.062 0l-4.465 4.455-4.466-4.455z"
                      fill="#0278D5"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.MarkAsFailure
              </p>
              <input
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="MarkAsFailure"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FailureStrategyPanel /> tests initial render with no data 1`] = `
<div
  class="main"
  data-testid="failure-strategy-panel"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-size-small"
  >
    <span>
      pipeline.failureStrategies.helpText
    </span>
    <a
      href="pipeline.failureStrategies.learnMoreLink"
      rel="noreferrer"
      target="_blank"
    >
      pipeline.createPipeline.learnMore
    </a>
  </p>
  <div
    class="header"
  >
    <div
      class="tabs"
    >
      <button
        class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
        data-testid="add-failure-strategy"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          <span>
            add
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<FailureStrategyPanel /> tests removing a strategy works 1`] = `
<div
  class="main"
  data-testid="failure-strategy-panel"
>
  <p
    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey700 StyledProps--font-size-small"
  >
    <span>
      pipeline.failureStrategies.helpText
    </span>
    <a
      href="pipeline.failureStrategies.learnMoreLink"
      rel="noreferrer"
      target="_blank"
    >
      pipeline.createPipeline.learnMore
    </a>
  </p>
  <div
    class="header"
  >
    <div
      class="tabs"
    >
      <ul
        class="stepList"
      >
        <li
          class="stepListItem"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main stepListBtn StyledProps--intent-primary Button--with-current-color"
            data-selected="true"
            data-testid="failure-strategy-step-0"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              1
            </span>
          </button>
        </li>
      </ul>
      <button
        class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
        data-testid="add-failure-strategy"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="12"
            viewBox="0 0 16 16"
            width="12"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          <span>
            add
          </span>
        </span>
      </button>
    </div>
    <button
      class="bp3-button bp3-minimal bp3-small Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
      data-testid="remove-failure-strategy"
      type="button"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="main-trash"
      >
        <svg
          height="12"
          viewBox="0 0 16 20"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
            fill="currentColor"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
            fill="currentColor"
            fill-rule="evenodd"
            opacity="0.3"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="bp3-form-group failureSelect"
  >
    <label
      class="bp3-label"
      for="failureStrategies[0].onFailure.errors"
    >
      pipeline.failureStrategies.onFailureOfType
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="selectWrapper"
      >
        <div
          class="bp3-popover-wrapper errorSelect bp3-fill"
        >
          <div
            class="bp3-popover-target"
          >
            <div
              class=""
            >
              <div
                class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
              >
                <div
                  class="bp3-tag-input-values"
                >
                  <span
                    class="bp3-tag tag"
                    data-tag-index="0"
                  >
                    <span
                      class="bp3-text-overflow-ellipsis bp3-fill"
                    >
                      pipeline.failureStrategies.errorTypeLabels.Authentication
                    </span>
                    <button
                      class="bp3-tag-remove"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-small-cross"
                        icon="small-cross"
                      >
                        <svg
                          data-icon="small-cross"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            small-cross
                          </desc>
                          <path
                            d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                  <input
                    class="bp3-input-ghost bp3-multi-select-tag-input-input"
                    name="failureStrategies[0].onFailure.errors"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <label
          class="bp3-control bp3-checkbox"
        >
          <input
            name="failureStrategies[0].onFailure.errors"
            type="checkbox"
            value="AllErrors"
          />
          <span
            class="bp3-control-indicator"
          />
          common.allErrors
        </label>
      </div>
    </div>
  </div>
  <div
    class="bp3-form-group"
  >
    <label
      class="bp3-label"
      for="failureStrategies[0].onFailure.action"
    >
      pipeline.failureStrategies.performAction
       
      <span
        class="bp3-text-muted"
      />
    </label>
    <div
      class="bp3-form-content"
    >
      <div
        class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
      >
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
          >
            <label
              class="Thumbnail--squareCardContainer thumbnail"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
              >
                <span
                  class="Card--corner"
                >
                  <span
                    class="Card--badge"
                  />
                  <span
                    class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                    data-icon="main-tick"
                  >
                    <svg
                      height="10"
                      viewBox="0 0 11 8"
                      width="10"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="bp3-icon bp3-icon-ban-circle StyledProps--main"
                  icon="ban-circle"
                >
                  <svg
                    data-icon="ban-circle"
                    height="26"
                    viewBox="0 0 20 20"
                    width="26"
                  >
                    <desc>
                      ban-circle
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm5 11H5c-.55 0-1-.45-1-1s.45-1 1-1h10c.55 0 1 .45 1 1s-.45 1-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
              >
                pipeline.failureStrategies.strategiesLabel.Abort
              </p>
              <input
                checked=""
                name="failureStrategies[0].onFailure.action.type"
                type="checkbox"
                value="Abort"
              />
            </label>
            <button
              aria-label="Change"
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
              data-testid="thumbnail-select-change"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                data-icon="Edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Change
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
